--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,15 @@ server.error.include-binding-errors=always
 server.error.include-message=always
 server.error.include-stacktrace= never
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/db_personel
-spring.datasource.username= db_user
-spring.datasource.password= db_password
+#spring.datasource.url= jdbc:postgresql://localhost:5432/db_personel
+#spring.datasource.username= db_user
+#spring.datasource.password= db_password
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.show-sql=true
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/personel_db
+spring.datasource.username= postgres
+spring.datasource.password= db_password
