--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.show-sql=true
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/dympersonel
+spring.datasource.url= jdbc:postgresql://localhost:5432/personel_db
 spring.datasource.username= postgres
 spring.datasource.password= db_password
